--- a/src/components/css/RocketItem.css
+++ b/src/components/css/RocketItem.css
@@ -21,7 +21,7 @@
   justify-content: flex-start;
 }
 
-.statuss { /* fix class name to show status */
+.status {
   font-size: 13px;
   margin-bottom: 10px;
   background-color: #007bff;
@@ -32,8 +32,20 @@
   border: 1px solid #007bff;
 }
 
+.disabled {
+  background-color: #e0e0e0;
+  color: #000;
+  border: 1px solid #e0e0e0;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+}
+
 .rocket-item__reserve-btn {
-  height: 50px;
+  padding: 20px;
   background-color: #007bff;
   border-radius: 5px;
   border: none;
