Add Linters and Github Flow config

--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -2,7 +2,7 @@
   display: flex;
   height: 60px;
   align-items: center;
-  flex-flow:row wrap;
+  flex-flow: row wrap;
   margin-bottom: 15px;
   border-bottom: 2px solid rgba(192, 192, 192, 0.5);
   padding: 10px 0;
@@ -13,9 +13,6 @@
   flex-flow: row wrap;
   align-items: center;
   gap: 15px;
-}
-
-.main-nav .brand {
   color: #444;
 }
 
@@ -24,7 +21,7 @@
 }
 
 .main-nav .nav-links a {
-  color: #0479FA;
+  color: #0479fa;
   margin: 0 10px;
   text-decoration: none;
   padding-bottom: 4px;
@@ -32,9 +29,9 @@
 }
 
 .main-nav .nav-links a:hover {
-  border-bottom: 1px solid #0479FA;
+  border-bottom: 1px solid #0479fa;
 }
 
 .main-nav .nav-links a.active {
-  border-bottom: 1px solid #0479FA;
+  border-bottom: 1px solid #0479fa;
 }
