--- a/src/components/css/Missions.css
+++ b/src/components/css/Missions.css
@@ -1,7 +1,7 @@
 #missions_table {
   width: 100%;
-  border: 1px solid rgba(192, 192, 192, .5);
-  border-spacing:none;
+  border: 1px solid rgba(192, 192, 192, 0.5);
+  border-spacing: 0;
   border-collapse: collapse;
 }
 
@@ -15,9 +15,9 @@
   border-spacing: 0;
 }
 
-#missions_table tr:hover{
+#missions_table tr:hover {
   background: #e6e6e6;
-  border-bottom: 2px #e6e6e6;;
+  border-bottom: 2px #e6e6e6;
 }
 
 #missions_table tbody tr td {
@@ -25,7 +25,7 @@
   line-height: 23px;
   padding: 20px 0;
   border-bottom: 2px solid #e6e6e6;
-  margin:  10px 20px;
+  margin: 10px 20px;
 }
 
 #missions_table tbody tr th {
@@ -35,15 +35,11 @@
   vertical-align: top;
 }
 
-#missions_table tbody tr td {
-  
-}
-
-#missions_table tbody tr td button{
+#missions_table tbody tr td button {
   border: none;
-  display:block;
+  display: block;
   padding: 4px;
-  white-space:nowrap;
+  white-space: nowrap;
   background: #fff;
   width: 100px;
   margin: 0 10px;
@@ -68,18 +64,17 @@
 }
 
 #missions_table tbody tr td span {
-  padding: 2px;
   width: 120px;
   white-space: nowrap;
   font-weight: 500;
   font-size: 14px;
   border-radius: 4px;
   padding: 5px 10px;
-  
 }
+
 #missions_table tbody tr td span.member {
   color: #fff;
-  background: #0479FA;
+  background: #0479fa;
 }
 
 #missions_table tbody tr td span.not-member {
